--- a/app/src/main/res/drawable/category_item_border.xml
+++ b/app/src/main/res/drawable/category_item_border.xml
@@ -8,9 +8,9 @@
         android:color="@color/white"/>
 
     <corners
-        android:topLeftRadius="@dimen/card_radius"
-        android:bottomLeftRadius="15dp"
-        android:topRightRadius="15dp"
-        android:bottomRightRadius="@dimen/card_radius"/>
+        android:topLeftRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:topRightRadius="20dp"
+        android:bottomRightRadius="20dp"/>
 
 </shape>
