--- a/app/src/main/res/drawable/category_item_border.xml
+++ b/app/src/main/res/drawable/category_item_border.xml
@@ -4,8 +4,8 @@
     <solid android:color="#FFFFFF"/>
 
     <stroke
-        android:width="1dp"
-        android:color="@color/white"/>
+        android:width="2dp"
+        android:color="@color/black"/>
 
     <corners
         android:topLeftRadius="20dp"
