--- a/app/src/main/res/drawable/nav_item_background.xml
+++ b/app/src/main/res/drawable/nav_item_background.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_100"/>
-            <corners android:radius="16dp"/>
+            <solid android:color="@color/white" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/black"/>
+            <corners android:radius="30dp"/>
         </shape>
     </item>
-
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent"/>
