--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,23 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     >
 
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation" />
+        android:layout_above="@id/bottom_navigation"
+        android:layout_marginBottom="0dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu"
-        app:itemIconTint="@color/bottom_nav_colors"
-        app:itemTextColor="@color/bottom_nav_colors"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-27dp"
+        android:background="@drawable/bottom_nav_background"
+        android:padding="5dp"
+        android:paddingBottom="0dp"
+        app:itemActiveIndicatorStyle="@style/NoActiveIndicator"
         app:itemBackground="@drawable/nav_item_background"
+        app:itemIconSize="38dp"
         app:labelVisibilityMode="labeled"
-        android:layout_alignParentBottom="true" />
+        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
