--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,10 +3,25 @@
     <item
         android:id="@+id/nav_home"
         android:title="Home"
+        android:icon="@drawable/ic_quest" />
+
+    <item
+        android:id="@+id/nav_home2"
+        android:title="Home"
         android:icon="@drawable/ic_home" />
+
+    <item
+        android:id="@+id/nav_home3"
+        android:title="Home"
+        android:icon="@drawable/ic_task" />
+
+    <item
+        android:id="@+id/nav_home4"
+        android:title="Home"
+        android:icon="@drawable/ic_quest" />
 
     <item
         android:id="@+id/nav_categories"
         android:title="Categories"
-        android:icon="@drawable/ic_home" />
+        android:icon="@drawable/ic_category" />
 </menu>
