--- a/app/src/main/res/drawable/bottom_nav_background.xml
+++ b/app/src/main/res/drawable/bottom_nav_background.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/purple_100"/>
+    <solid android:color="@color/yellow"/>
     <corners android:topLeftRadius="30dp"
         android:topRightRadius="30dp"/>
     <stroke android:width="2dp" android:color="@color/black"/>
