--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -19,21 +19,22 @@
         android:maxLines="2"
         android:scrollHorizontally="false"
         android:text="Category Name"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:layout_marginTop="-5dp"/>
-
+        android:layout_marginTop="-5dp"
+        android:fontFamily="@font/font9"/>
 
     <TextView
         android:id="@+id/textTaskCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|start"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginBottom="3dp"
         android:text="10 tasks"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/font9" />
 </FrameLayout>
