--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple_500">#6200EE</color>
     <color name="purple_100">#E1BEE7</color>
-
+    <color name="yellow">#FFEB3B</color>
 </resources>
