--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
 <resources>
     <dimen name="category_item_spacing">8dp</dimen>
     <dimen name="card_radius">50dp</dimen>
+
+    <dimen name="task_circle_size">40dp</dimen>
+    <dimen name="task_box_height">50dp</dimen>
+    <dimen name="task_box_margin">4dp</dimen>
+    <dimen name="task_text_margin_left">20dp</dimen>
+    <dimen name="task_text_margin_right">6dp</dimen>
+    <dimen name="task_text_size">14sp</dimen>
+    <dimen name="task_circle_text_size">20sp</dimen>
 </resources>
