--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,17 +1,18 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cardTask"
     android:layout_width="200dp"
     android:layout_height="150dp"
     android:layout_marginEnd="12dp"
-    android:padding="12dp"
-    android:backgroundTint="@color/purple_100"
     android:radius="16dp"
     android:elevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"
+        >
 
         <TextView
             android:id="@+id/tvTaskTitle"
