--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/activity_tasks"
         android:title="Home"
-        android:icon="@drawable/ic_home" />
+        android:icon="@drawable/ic_task" />
 
     <item
         android:id="@+id/nav_home3"
