--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -18,20 +18,35 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_arrow_back"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Nazad" />
+            android:contentDescription="Nazad"
+            android:background="@null"
+            android:padding="0dp"/>
+
 
         <ImageButton
             android:id="@+id/btnProfile"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="end|center_vertical"
             android:padding="4dp"
-            android:src="@drawable/ic_category"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginRight="10dp"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:src="@drawable/ic_profile"
             android:contentDescription="Profil" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <!-- Day / Week / Month Toolbar -->
     <LinearLayout
@@ -39,7 +54,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:background="@color/white">
 
         <Button
             android:id="@+id/btnDay"
@@ -65,8 +81,7 @@
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"/>
+        android:layout_height="wrap_content" />
 
     <!-- Dodaj ispod MonthView u tvom layout-u -->
     <com.kizitonwose.calendar.view.WeekCalendarView
