--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -40,7 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <RadioButton
+        <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
