--- a/app/src/main/res/layout/fragment_week_calendar.xml
+++ b/app/src/main/res/layout/fragment_week_calendar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FFFFFF"
-    tools:context=".fragments.CalendarFragment">
+    tools:context=".presentation.fragments.CalendarFragment">
 
     <!-- Header: strelice i dani -->
     <LinearLayout
